--- a/sass/modules/post-card/_post-card.scss
+++ b/sass/modules/post-card/_post-card.scss
@@ -266,7 +266,6 @@
     margin-bottom: 20px;
     flex-direction: column;
     width: 100%;
-    gap: 32px;
   }
   // Social Share
   .social-share {
