--- a/sass/partials/_sidebar.scss
+++ b/sass/partials/_sidebar.scss
@@ -74,13 +74,11 @@
         display: flex;
         justify-content: center;
       }
-
     }
   }
   /* Recent Comment List Block Widget & Latest Post Widget Block */
   .has-avatars.has-dates.has-excerpts.wp-block-latest-comments,
-  .has-dates.has-excerpts.wp-block-latest-comments
-  {
+  .has-dates.has-excerpts.wp-block-latest-comments {
     li {
       &.wp-block-latest-comments__comment {
         .wp-block-latest-comments__comment-meta {
@@ -182,7 +180,7 @@
     }
   }
   /* Select Option  */
-  select  {
+  select {
     max-width: 100%;
     height: 50px;
     width: 100%;
@@ -235,11 +233,8 @@
         align-items: center;
         gap: 10px;
         border-radius: 50px;
-
-
       }
     }
-
   }
   /* Search Widget */
   .search-form {
@@ -262,8 +257,7 @@
     margin-bottom: -2px;
   }
   .wp-block-search,
-  .search-form
-  {
+  .search-form {
     display: inline-block;
     width: 100%;
     overflow: hidden;
@@ -305,6 +299,19 @@
       margin-left: 0 !important;
     }
   }
+
+  .single-post-item {
+    .single-post-meta {
+      display: inline-flex;
+      align-items: flex-start;
+      padding-top: 15px;
+      margin-top: 30px;
+      margin-bottom: 20px;
+      flex-direction: column;
+      width: 100%;
+      gap: 32px;
+    }
+  }
   /* Tagcloud Widget */
   .tagcloud,
   .wp-block-tag-cloud {
@@ -332,7 +339,6 @@
     }
   }
 
-
   /* Default Widget */
   //ol {
   //  padding-left: 0;
@@ -353,7 +359,6 @@
       &:last-child {
         padding-bottom: 0;
         border-bottom: 0;
-
       }
       /* Recent Comment Widget */
       &.recentcomments {
@@ -440,8 +445,6 @@
   }
 }
 
-
-
 /* About Info Widget*/
 .widget-about-info {
   display: flex;
@@ -484,7 +487,6 @@
       color: $secondary-color;
       @include transition;
 
-
       &:hover {
         color: $white;
         @include transition;
@@ -525,7 +527,6 @@
 .wp-block-latest-posts,
 .wp-block-rss,
 .widget_rss {
-
   .wp-block-rss__item-title {
     display: inline-block;
     width: 100%;
@@ -545,7 +546,6 @@
     font-weight: 500;
     text-transform: capitalize;
     position: relative;
-
   }
 
   .wp-block-latest-posts__post-date,
@@ -609,7 +609,7 @@
         border-radius: 6px;
         img {
           transform: scale(1);
-          @include transition
+          @include transition;
         }
       }
       .latest-post-desc {
@@ -684,10 +684,10 @@
 }
 // Widget Promotion
 .widget_promotion {
-    padding-top: 50px;
-    padding-bottom: 50px;
-    text-align: center;
-    background-color: $black;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  text-align: center;
+  background-color: $black;
 
   .wp-block-heading {
     width: 100%;
